# subsocial-flutter

./: .gitignore  Cargo.toml  Makefile.toml  README.md  analysis_options.yaml  init.py  pubspec.yaml  rust-toolchain  rustfmt.toml
.github/workflows/: ci.yml  lints.yml  release.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/network/subsocial/subsocial_sdk/: SubsocialSdkPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/network/subsocial/subsocial_sdk_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: subsocial_sdk.podspec
ios/Classes/: SubsocialSdkPlugin.h  SubsocialSdkPlugin.m  SwiftSubsocialSdkPlugin.swift  binding.h
lib/: allo_isolate.dart  extensions.dart  ffi.dart  ffi_ext.dart  ipfs.dart  json_models.dart  multi_query.dart  subsocial_sdk.dart  utils.dart
native/ffi/: Cargo.toml  binding.h  build.rs  def.proto
native/ffi/src/: array_view.rs  dart_utils.rs  handler.rs  lib.rs  shared_buffer.rs  transformer.rs
native/ffi/src/pallet/: mod.rs  posts.rs  posts_xt.rs  profile_follows.rs  profile_follows_xt.rs  profiles.rs  profiles_xt.rs  reactions.rs  reactions_xt.rs  space_follows.rs  space_follows_xt.rs  spaces.rs  spaces_xt.rs  system.rs
native/ffi/src/pb/: mod.rs  subsocial.rs  subsoical.rs
native/sdk/: Cargo.toml  build.rs
native/sdk/metadata/: subsocial.scale
native/sdk/src/: lib.rs  multiaddress.rs  runtime.rs  subsocial.rs  subsocial_api.rs
native/sdk/src/pallet/: mod.rs  permissions.rs  posts.rs  profile_follows.rs  profiles.rs  reactions.rs  space_follows.rs  spaces.rs  traits.rs  utils.rs
scripts/: adbhook.sh  build-release.sh  protogen.sh
test/: ipfs_client_test.dart  json_models_test.dart  subsocial_sdk_test.dart
