[package]
name = "subsocial-ffi"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[lib]
name = "subscoial"
# this value will change depending on the target os
# for iOS it would be `staticlib`
# for android it would be `c-dylib`
crate-type = ["rlib"]

[dependencies]
sdk = { path = "../sdk", package = "subsocial-sdk" }
bytes = "1.0"
prost = "0.7"
prost-types = "0.7"

[build-dependencies]
cbindgen = "0.19"
prost-build = "0.7"
