[package]
name = "subsocial-ffi"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[lib]
name = "subsocial"
# this value will change depending on the target os
# for iOS it would be `rlib`
# for android it would be `c-dylib`
crate-type = ["rlib"]

[dependencies]
sdk = { path = "../sdk", package = "subsocial-sdk" }
bytes = "1.0"
prost = "0.9.0"
prost-types = "0.9.0"
once_cell = "1.7"
allo-isolate = { version = "0.1.12", features = ["catch-unwind"] }
# Runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "signal", "process"] }

[build-dependencies]
cbindgen = "0.20.0"
prost-build = "0.9.0"
