[package]
name = "subsocial-sdk"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[dependencies]
subxt = { version = "0.15.0", package = "substrate-subxt" }
codec = { package = "parity-scale-codec", version = "=2.0.1", features = ["derive", "full"] }

# Pallets
# Substrate dependencies
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }


[dev-dependencies]
async-std = { version = "1.8", features = ["attributes"] }
