[package]
name = "subsocial-sdk"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[dependencies]
# Substrate crates.
scale = { package = "parity-scale-codec", version = "2.3.0", features = ["derive", "full", "bit-vec"] }
hex = { version = "0.4", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[dependencies.subxt]
git = "https://github.com/paritytech/subxt.git"
version = "0.15.0"
rev = "7aac7d" # https://github.com/paritytech/subxt/commit/7aac7d

[build-dependencies]
syn = { version = "1.0.80", optional = true }
scale = { package = "parity-scale-codec", version = "2.3.0", default-features = false, optional = true }
frame-metadata = { version = "14.0.0", features = ["v14", "std"], optional = true }

[build-dependencies.subxt-codegen]
git = "https://github.com/paritytech/subxt.git"
version = "0.2.0"
rev = "7aac7d" # https://github.com/paritytech/subxt/commit/7aac7d
optional = true

[features]
generate-runtime = ["subxt-codegen", "syn", "frame-metadata", "scale"]
